feat: conclusão US020, foi criado o endpoint para enviar email para membros do brainstorming e um modelo de email em html
